--- a/countrypickerlibrary/src/main/res/values/dimens.xml
+++ b/countrypickerlibrary/src/main/res/values/dimens.xml
@@ -30,7 +30,11 @@
     <dimen name="font_24">24sp</dimen>
     <dimen name="font_30">30sp</dimen>
 
-    <dimen name="item_icon_size">48dp</dimen>
+    <dimen name="item_icon_width">48dp</dimen>
+    <dimen name="item_icon_height">36dp</dimen>
+    <dimen name="image_border_width">1dp</dimen>
+    <dimen name="image_border_radious">1dp</dimen>
+
     <dimen name="expand_icon_size">32dp</dimen>
 
 </resources>
