Add Readme file for the code as well as Screenshots Add black theme with custom colors

--- a/countrypickerlibrary/src/main/res/layout/row_item_country_lists.xml
+++ b/countrypickerlibrary/src/main/res/layout/row_item_country_lists.xml
@@ -54,12 +54,14 @@
             android:src="@mipmap/check_mark"/>
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/ll_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/background_grey_light_color"
-        android:orientation="horizontal">
+        android:orientation="vertical">
     </LinearLayout>
+
 </LinearLayout>
 
