--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
 
+    <color name="red_color">#ff0000</color>
+
     <color name="text_color_white">#ffffff</color>
     <color name="text_color_black">#323643</color>
     <color name="text_color_gray1">#a2a2a2</color>
